# rents

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
rent_management_system/: hooks.py  modules.txt
rents/: hooks.py  patches.txt
rents/patches/: create_landlord_tenant_roles.py
rents/rental_management_system/: api.py
rents/rental_management_system/doctype/maintenance_request/: maintenance_request.js  maintenance_request.json  maintenance_request.py  test_maintenance_request.py
rents/rental_management_system/doctype/payment/: payment.js  payment.json  payment.py  test_payment.py
rents/rental_management_system/doctype/property/: property.js  property.json  property.py  test_property.py
rents/rental_management_system/doctype/rental/: rental.js  rental.json  rental.py  test_rental.py
rents/rental_management_system/doctype/testimonial/: test_testimonial.py  testimonial.js  testimonial.json  testimonial.py
rents/rental_management_system/print_format/rental_agreement/: rental_agreement.json
